# foocat_cuspi

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: foocat_cuspi.rst  modules.rst
foocat_cuspi/: foocat_cuspi.py
tests/: test_foocat_cuspi.py
