[tool.poetry]
name = "foocat_cuspi"
version = "0.1.0"
description = "Python package that eases the pain concatenating Pandas categoricals!"
authors = ["Victor Cuspinera <vcuspinera@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
